--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,10 +50,16 @@
                 android:layout_height="wrap_content"
                 android:text="@string/end_service" />
             <TextView
-                android:id="@+id/number_of_data"
+                android:id="@+id/number_of_beacons"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/spacing_huge"
+                style="@style/primary_text_view"/>
+            <TextView
+                android:id="@+id/number_of_aps"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/spacing_medium"
                 style="@style/primary_text_view"/>
             <Button
                 android:id="@+id/export_data"
